--- a/android/app/src/main/res/menu/bottom_nav_menu_student.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu_student.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-  
+
+    <item
+        android:id="@+id/fragmentIncomingRequestStudent"
+        android:icon="@drawable/baseline_format_list_bulleted_24"/>
+
+    <item
+        android:id="@+id/fragmentCreateRequestStudent"
+        android:icon="@drawable/baseline_add_24"/>
+
+    <item
+        android:id="@+id/fragmentStudentProfile"
+        android:icon="@drawable/baseline_person_24"/>
+
 </menu>
